<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_group_ops_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/menu_sort"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/menu_group_ops_sort_name"
                android:title="@string/menu_ops_sort_name" />
            <item
                android:id="@+id/menu_group_ops_sort_type"
                android:title="@string/menu_ops_sort_type" />
            <item
                android:id="@+id/menu_group_ops_sort_faction"
                android:title="@string/menu_ops_sort_faction" />
        </menu>

    </item>

</menu>