<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="io.nicco.r6s.single_home">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/spacing2x">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing2x"
            android:gravity="start"
            android:text="@string/app_name_long"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/app_description"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing2x"
            android:gravity="start"
            android:text="@string/single_home_contribute"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/single_home_contribute_text"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:padding="@dimen/spacing1x">

        <Button
            android:id="@+id/single_home_btn_ops"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/nav_ops" />

        <Button
            android:id="@+id/single_home_btn_weapons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/nav_weapons" />

        <Button
            android:id="@+id/single_home_btn_maps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:text="@string/nav_maps" />

    </LinearLayout>

</LinearLayout>
