<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="io.nicco.r6s.single_about">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_about_text"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <ImageView
        android:id="@+id/single_about_img"
        android:layout_width="@dimen/about_logo_size"
        android:layout_height="@dimen/about_logo_size"
        android:layout_marginBottom="@dimen/spacing4x"
        android:layout_marginTop="@dimen/spacing4x"
        android:src="@drawable/logo_github_w" />

    <TextView
        android:id="@+id/single_about_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_about_github_bugs"
        android:textAppearance="@android:style/TextAppearance.Material.Large" />

    <TextView
        android:id="@+id/single_about_contribute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing05x"
        android:text="@string/single_about_github_contribute"
        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing05x"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/single_about_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

        <TextView
            android:id="@+id/single_about_changelog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single_about_changelog"
            android:textAppearance="@android:style/TextAppearance.Material.Medium" />

    </LinearLayout>

</LinearLayout>
